correction version tablette

--- a/css/activity.css
+++ b/css/activity.css
@@ -30,7 +30,7 @@
   width: 22%;
   max-height: 444px;
   background-color: white;
-  box-shadow: 1px 3px 5px 1px #e2e6e9;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
   position: relative;
   border-radius: 20px;
 }
