--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -127,7 +127,7 @@
   height: 144px;
   border-radius: 20px;
   margin-top: 26px;
-  box-shadow: 1px 2px #f2f2f2da;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
 }
 
 .pop:hover {
@@ -153,7 +153,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 40%;
-  padding-right: 30px;
+  padding-right: 0px;
 }
 
 .pop_title {
